Fixed website display issues on small screens.

--- a/src/components/EducationInfo/EducationInfo.scss
+++ b/src/components/EducationInfo/EducationInfo.scss
@@ -2,15 +2,23 @@
 
 .education {
   margin-top: 50px;
+
+  &__form {
+    display: grid !important;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1px 30px;
+
+    & div {
+      display: flex;
+      flex-direction: column;
+    }
+  }
 }
 
-.education__form {
-  display: grid !important;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1px 30px;
-}
-
-.education__form div {
-  display: flex;
-  flex-direction: column;
+@media (max-width: 768px) {
+  .education {
+    &__form {
+      grid-gap: 1px 10px;
+    }
+  }
 }
