--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -83,3 +83,13 @@ input[type="file"]::file-selector-button {
     }
   }
 }
+
+@media (max-width: 425px) {
+  .profile {
+    padding: 5px;
+
+    &__image-choice {
+      margin-bottom: 10px;
+    }
+  }
+}
